--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,17 @@
+langgraph
+langgraph-prebuilt
+langgraph-sdk
+langgraph-checkpoint-sqlite
+langsmith
+langchain-community
+langchain-core
+langchain-openai
+langchain-groq
+notebook
+tavily-python
+wikipedia
+trustcall
+langgraph-cli[inmem]
 streamlit
 pandas
 numpy
